# alert-fatigue

./: CHANGELOG.md  README.md  pyproject.toml
src/alertfatigue/: __init__.py  analyze.py  cli.py  model.py
tests/: test_analyze.py  test_cli.py
