[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alertfatigue"
version = "0.1.0"
description = "Analyze alert history for noise, flapping, MTTA, and self-resolving alerts, with tuning recommendations."
readme = "README.md"
authors = [{ name = "Joshua John", email = "josh202@gmail.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["alerting", "sre", "on-call", "pagerduty", "observability", "noise"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
