[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alertfatigue"
version = "0.2.0"
description = "Analyze alert history for noise, flapping, MTTA, per-rule noise scores, and severity inflation, with tuning recommendations."
readme = "README.md"
authors = [{ name = "Joshua John", email = "josh202@gmail.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["alerting", "sre", "on-call", "pagerduty", "observability", "noise"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
alertfatigue = "alertfatigue.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
